# StoneyNakoda

./: .env.example  .gitignore  AGENTS.md  BAK_SNEPPEN_README.md  CLAUDE.md  CONTRIBUTING_DATA.md  DATASET_README.md  DATA_GOVERNANCE.md  INDEX.md  MATH_TO_MANIM_PATTERNS.md  PIPELINE_FAILURE_REPORT.md  PIPELINE_GUIDE.md  PIPELINE_TEST_REPORT.md  PROJECT_SUMMARY.md  PUSH_TO_BAK_SNEPPEN.md  QUICK_REFERENCE.md  README.md  README_BAK_SNEPPEN_COMPLETE.md  RLHFrules.json  RL_GYM_VERIFICATION.md  RUN_PIPELINE_CHECKLIST.md  SOURCE_MANIFEST.yml  VISUAL_OVERVIEW.md  analyze_bak_sneppen_data.py  audit_report.json  bak_sneppen_3d.py  bak_sneppen_3d_enhanced.py  bak_sneppen_config.py  bak_sneppen_interactive.py  bilingual_qa_generator.py  bilingual_qa_generator2.py  convert_data_format.py  finetunesetup.py  old_environment.txt  openai_finetune.py  pyproject.toml  requirement.txt  requirements-minimal.txt  requirements.txt  requirements_bak_sneppen.txt  (+4 more)
.claude/: settings.local.json
.github/workflows/: ci.yml
Dictionaries/: OctoberSamplebilingual_training_set_v2.jsonl  bilingual_training_set.jsonl  bilingual_training_set_v2.jsonl  english_dictionary.jsonl  stoney_dictionary.jsonl
Dictionaries/checkpoints_v2/: checkpoint_0.jsonl  checkpoint_1.jsonl  checkpoint_2.jsonl  checkpoint_3.jsonl  checkpoint_4.jsonl  checkpoint_5.jsonl  checkpoint_6.jsonl  checkpoint_7.jsonl  checkpoint_8.jsonl  checkpoint_9.jsonl
OpenAIFineTune/: stoney_train.jsonl  stoney_valid.jsonl
data/: rl_training_rules_stoney.json
environments/stoney_nakoda_translation/: README.md  pyproject.toml
environments/stoney_nakoda_translation/stoney_nakoda_translation/: environment.py
environments/stoney_nakoda_translation/stoney_nakoda_translation/data/: sample_tasks.jsonl
schemas/: grammar_rule.schema.json  rl_task.schema.json  source_manifest.schema.json
scripts/: check_config.py  validate_source_manifest.py
stoney_rl_grammar/: __init__.py  config.py  llm_json.py  models.py  pdf_ingest.py  pipeline.py  rule_extractor.py  rule_organizer.py  task_generator.py
tests/: smoke_test_imports.py  test_config.py  test_hf_publishing_config.py  test_llm_json.py  test_source_manifest.py
wandb/run-20251029_052041-grdgse2x/: run-grdgse2x.wandb
(+16 files in other folders)
